--- a/README
+++ b/README
@@ -1,11 +1,16 @@
-Spec files and patches for remi repository
+Deprecated spec files and patches for remi repository
 
-Copyright (c) 2005-2013 Remi Collet
+===============================================================
+NEW OFFICIAL GIT REPOSITORY ON https://git.remirepo.net/cgit/
+===============================================================
+
+
+Copyright (c) 2005-2017 Remi Collet
 License: CC-BY-SA
-http://creativecommons.org/licenses/by-sa/3.0/
+http://creativecommons.org/licenses/by-sa/4.0/
 
 
-http://rpms.famillecollet.com/
-http://blog.famillecollet.com/
-http://forums.famillecollet.com/
+https://rpms.famillecollet.com/
+https://blog.famillecollet.com/
+https://forum.famillecollet.com/
 
