--- a/README
+++ b/README
@@ -1,8 +1,10 @@
 Deprecated spec files and patches for remi repository
 
 ===============================================================
-NEW OFFICIAL GIT REPOSITORY ON https://git.remirepo.net/cgit/
+ NEW OFFICIAL GIT REPOSITORY ON https://git.remirepo.net/cgit/
 ===============================================================
+
+This repository still used for issues.
 
 
 Copyright (c) 2005-2017 Remi Collet
