--- a/README
+++ b/README
@@ -4,6 +4,9 @@
 
 This repository is only used for issues.
 
+No pull request, for patch proposal, see
+https://git.remirepo.net/cgit/?p=about
+
 
 Copyright (c) 2005-2017 Remi Collet
 License: CC-BY-SA
