--- a/README
+++ b/README
@@ -10,10 +10,17 @@ https://git.remirepo.net/cgit/?p=about
 
 Copyright (c) 2005-2017 Remi Collet
 License: CC-BY-SA
-http://creativecommons.org/licenses/by-sa/4.0/
+https://creativecommons.org/licenses/by-sa/4.0/
 
+Web sites:
 
-https://rpms.famillecollet.com/
-https://blog.famillecollet.com/
-https://forum.famillecollet.com/
+* https://rpms.famillecollet.com/
+* https://blog.famillecollet.com/
+* https://forum.famillecollet.com/
 
+Support / Assistance:
+
+* [github issue](https://github.com/remicollet/remirepo/issues)
+* [forum](https://forum.famillecollet.com/)
+* [Discord server](https://discord.gg/qwC6kM2dcE)
+* IRC: #remirepo channel on Libera.chat
